[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blum-drop-game-bot"
authors = [
    {name="Criptacoder", email="crippti@gmail.com"}
]

version = 'v1.0.0'
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tls_client",
    "pydantic",
    "PyYAML"
]

[project.scripts]
blum-drop-game-bot = "blum_drop_game_bot.main:main"


